5.6.1

2013-02-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* Autotool chain update.

	* rfc822: workaround for invalid utf-8 input making libidn go off the
	rails.

2012-12-04  Alessandro Vesely <vesely@tana.it>

	* rfc2045/makemime.c (openfile_or_pipe): Do not dup stdin filedesc,
	sometimes the stdin buffer already gets filled.

5.6.0

2012-09-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* cgi/cgi.c (cgi_set_cookie_url): Fix wrong call to free(). Not
	currently used.

	* maildir/maildiraclt.c (maildir_acl_delete): Fix double-free on error
	path of an ENOMEM.

2012-05-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* attachments.c (attach_upload): When attaching PGP keys, add
	name="pgpkeys.txt" parameter to the Content-Type: header; add
	Content-Disposition: attachment header.

	* gpglib/gpg.c: Make the MIME boundary delimiter shorter.

2012-05-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc2045/rfc2045mkboundary.c (rfc2045_mk_boundary): truncate
	the hostname portion of the boundary to 30 chars.

2012-04-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* liblock/mail.c (dotlock_exists): Quell a compiler warning.

2012-03-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* folder.c (folder_contents_title): INBOX, DRAFTS, TRASH, and SENT
	labels in HTML template files should now be coded in UTF-8.

2012-03-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* msg2html.c (msg2html_download): Fix decoding of attachment filenames.

2012-02-23  Osamu Aoki <osamu@debian.org>

	* Miscellaneous spelling fixes.

5.5.3

2011-11-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc2045/rfc2045reply.c (mkreply): Fix copying of the contents of the
	original message.

2011-11-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* msg2html.c (msg2html_download): rfc2231_udecodeDisposition() failure
	is not fatal.

	* cgi/cgi.c (cgiformdecode): Ditto.

	* pcp/pcp.c (list_msg_mime): Ditto.

2011-10-22  Sam Varshavchik  <mrsam@courier-mta.com>
