@@ -27,6 +27,7 @@ Error appending err14: 4
 Added rule12
 Added ruleauto1
 Added ruleauto2
+Added utf8rulé
 #MFMAILDROP=2
 #
 # DO NOT EDIT THIS FILE.  This is an automatically generated filter.
@@ -237,6 +238,19 @@ if (($SIZE > 0))
 {
     AUTOREPLYFROM="$FROM"
    `mailbot -A "X-Sender: $FROM" -A "From: $AUTOREPLYFROM" -m "Maildir/autoresponses/dummy2" $SENDMAIL -t -f ""`
+}
+
+##Op:contains
+##Header:subjéct
+##Value:tést
+##Folder:.
+##From:
+##Name:utf8rulé
+
+
+if ((/^subjéct:.*tést/))
+{
+   to "Maildir/."
 }
 
 to "Maildir/."
